--- a/src/components/LoadingSpinner.css
+++ b/src/components/LoadingSpinner.css
@@ -2,7 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* 화면 전체 높이 */
+  position: absolute; /* 또는 fixed */
+  top: 0;
+  width: 100%;
+  height: 100%; /* 화면 전체 높이가 아닌 자동 높이 */
+  background-color: rgba(0, 0, 0, 0.5); /* 반투명 검은색 배경 */
 }
 
 .spinner {
